--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="SceneNull.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="IScene.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
