--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -147,8 +147,8 @@
     <ClCompile Include="BoundingSphere.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CSVReader.cpp" />
-    <ClCompile Include="RushEnemyF.cpp" />
-    <ClCompile Include="RushEnemyG.cpp" />
+    <ClCompile Include="RushGhost.cpp" />
+    <ClCompile Include="CarGhost.cpp" />
     <ClCompile Include="Field.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
@@ -163,8 +163,8 @@
     <ClInclude Include="BoundingSphere.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CSVReader.h" />
-    <ClInclude Include="RushEnemyF.h" />
-    <ClInclude Include="RushEnemyG.h" />
+    <ClInclude Include="RushGhost.h" />
+    <ClInclude Include="CarGhost.h" />
     <ClInclude Include="Field.h" />
     <ClInclude Include="IScene.h" />
     <ClInclude Include="IWorld.h" />
