--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -48,10 +48,10 @@
     <ClCompile Include="CSVReader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="RushEnemyG.cpp">
+    <ClCompile Include="CarGhost.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="RushEnemyF.cpp">
+    <ClCompile Include="RushGhost.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -98,10 +98,10 @@
     <ClInclude Include="CSVReader.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="RushEnemyG.h">
+    <ClInclude Include="CarGhost.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="RushEnemyF.h">
+    <ClInclude Include="RushGhost.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
