--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -71,8 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>.\lib\gslib_2020\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>.\lib\gslib_2020\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Team4Production\lib\gslib_2020\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Team4Production\lib\gslib_2020\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -147,6 +147,8 @@
     <ClCompile Include="BoundingSphere.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CSVReader.cpp" />
+    <ClCompile Include="EnemyGenerator.cpp" />
+    <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="RushGhost.cpp" />
     <ClCompile Include="CarGhost.cpp" />
     <ClCompile Include="Field.cpp" />
@@ -154,6 +156,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +166,8 @@
     <ClInclude Include="BoundingSphere.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CSVReader.h" />
+    <ClInclude Include="EnemyGenerator.h" />
+    <ClInclude Include="GamePlayScene.h" />
     <ClInclude Include="RushGhost.h" />
     <ClInclude Include="CarGhost.h" />
     <ClInclude Include="Field.h" />
@@ -172,6 +177,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SceneNull.h" />
+    <ClInclude Include="TitleScene.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
