--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -59,6 +59,7 @@
     </ClCompile>
     <ClCompile Include="Collision.cpp">
       <Filter>ソース ファイル\Math</Filter>
+    </ClCompile>
     <ClCompile Include="CarGhost.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -129,6 +130,7 @@
     </ClInclude>
     <ClInclude Include="Collision.h">
       <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
     <ClInclude Include="CarGhost.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
