テストシーンの作成。

--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -144,6 +144,8 @@
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="ActorManager.cpp" />
+    <ClCompile Include="AnimatedMesh.cpp" />
+    <ClCompile Include="BossTestScene.cpp" />
     <ClCompile Include="BoundingSphere.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collision.cpp" />
@@ -165,7 +167,9 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="ActorManager.h" />
+    <ClInclude Include="AnimatedMesh.h" />
     <ClInclude Include="Assets.h" />
+    <ClInclude Include="BossTestScene.h" />
     <ClInclude Include="BoundingSphere.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collision.h" />
