--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="CSVReader.cpp" />
     <ClCompile Include="EnemyGenerator.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
+    <ClCompile Include="Poltergeist.cpp" />
     <ClCompile Include="RushGhost.cpp" />
     <ClCompile Include="CarGhost.cpp" />
     <ClCompile Include="Field.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="CSVReader.h" />
     <ClInclude Include="EnemyGenerator.h" />
     <ClInclude Include="GamePlayScene.h" />
+    <ClInclude Include="Poltergeist.h" />
     <ClInclude Include="RushGhost.h" />
     <ClInclude Include="CarGhost.h" />
     <ClInclude Include="Field.h" />
