--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -145,11 +145,14 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="ActorManager.cpp" />
     <ClCompile Include="BoundingSphere.cpp" />
+    <ClCompile Include="ByteBuf.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="CSVReader.cpp" />
+    <ClCompile Include="DrawUtil.cpp" />
     <ClCompile Include="EnemyGenerator.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
+    <ClCompile Include="PhysicsActor.cpp" />
     <ClCompile Include="Poltergeist.cpp" />
     <ClCompile Include="RushGhost.cpp" />
     <ClCompile Include="CarGhost.cpp" />
@@ -168,11 +171,14 @@
     <ClInclude Include="ActorManager.h" />
     <ClInclude Include="Assets.h" />
     <ClInclude Include="BoundingSphere.h" />
+    <ClInclude Include="ByteBuf.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="CSVReader.h" />
+    <ClInclude Include="DrawUtil.h" />
     <ClInclude Include="EnemyGenerator.h" />
     <ClInclude Include="GamePlayScene.h" />
+    <ClInclude Include="PhysicsActor.h" />
     <ClInclude Include="Poltergeist.h" />
     <ClInclude Include="RushGhost.h" />
     <ClInclude Include="CarGhost.h" />
