--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="ヘッダー ファイル\Math">
       <UniqueIdentifier>{66224367-209d-489a-a121-6e7e88c9cf65}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\SAGASA">
+      <UniqueIdentifier>{a2afb51e-ffa3-467c-acbb-c5190a112055}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\SAGASA">
+      <UniqueIdentifier>{9a39f670-72ca-4499-8e1c-6d0fa32b0200}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -80,6 +86,15 @@
     </ClCompile>
     <ClCompile Include="Poltergeist.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsActor.cpp">
+      <Filter>ソース ファイル\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawUtil.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="ByteBuf.cpp">
+      <Filter>ソース ファイル\SAGASA</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +169,15 @@
     </ClInclude>
     <ClInclude Include="Poltergeist.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsActor.h">
+      <Filter>ヘッダー ファイル\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawUtil.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="ByteBuf.h">
+      <Filter>ヘッダー ファイル\SAGASA</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
