--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -150,7 +150,8 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="CSVReader.cpp" />
-    <ClCompile Include="EnemyGenerator.cpp" />
+    <ClCompile Include="MapGenerator.cpp" />
+    <ClCompile Include="EnemyTestScene.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="Poltergeist.cpp" />
     <ClCompile Include="RushGhost.cpp" />
@@ -175,9 +176,12 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="CSVReader.h" />
-    <ClInclude Include="EnemyGenerator.h" />
+    <ClInclude Include="MapGenerator.h" />
+    <ClInclude Include="EnemyTestScene.h" />
     <ClInclude Include="GamePlayScene.h" />
+    <ClInclude Include="Line.h" />
     <ClInclude Include="Poltergeist.h" />
+    <ClInclude Include="Ray.h" />
     <ClInclude Include="RushGhost.h" />
     <ClInclude Include="CarGhost.h" />
     <ClInclude Include="Field.h" />
