--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -84,6 +84,7 @@
     <ClCompile Include="BossTestScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PsycokinesisBullet.cpp">
     <ClCompile Include="EnemyTestScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -167,6 +168,7 @@
     <ClInclude Include="BossTestScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="PsycokinesisBullet.h">
     <ClInclude Include="EnemyTestScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
