--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -85,6 +85,7 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="PsycokinesisBullet.cpp">
+    </ClCompile>
     <ClCompile Include="EnemyTestScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -169,6 +170,7 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="PsycokinesisBullet.h">
+    </ClInclude>
     <ClInclude Include="EnemyTestScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
