--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="DrawUtil.cpp" />
     <ClCompile Include="EnemyGenerator.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
+    <ClCompile Include="MapObject.cpp" />
     <ClCompile Include="PhysicsActor.cpp" />
     <ClCompile Include="Poltergeist.cpp" />
     <ClCompile Include="RushGhost.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="DrawUtil.h" />
     <ClInclude Include="EnemyGenerator.h" />
     <ClInclude Include="GamePlayScene.h" />
+    <ClInclude Include="MapObject.h" />
     <ClInclude Include="PhysicsActor.h" />
     <ClInclude Include="Poltergeist.h" />
     <ClInclude Include="RushGhost.h" />
