--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="EnemyTestScene.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="Poltergeist.cpp" />
+    <ClCompile Include="PoltergeistBullet.cpp" />
     <ClCompile Include="PsycokinesisBullet.cpp" />
     <ClCompile Include="RushGhost.cpp" />
     <ClCompile Include="CarGhost.cpp" />
@@ -180,10 +181,9 @@
     <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="EnemyTestScene.h" />
     <ClInclude Include="GamePlayScene.h" />
-    <ClInclude Include="Line.h" />
     <ClInclude Include="Poltergeist.h" />
+    <ClInclude Include="PoltergeistBullet.h" />
     <ClInclude Include="PsycokinesisBullet.h" />
-    <ClInclude Include="Ray.h" />
     <ClInclude Include="RushGhost.h" />
     <ClInclude Include="CarGhost.h" />
     <ClInclude Include="Field.h" />
