--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -95,6 +95,7 @@
     </ClCompile>
     <ClCompile Include="TestObj.cpp">
       <Filter>ソース ファイル\SAGASA</Filter>
+    </ClCompile>
     <ClCompile Include="AnimatedMesh.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -195,6 +196,7 @@
     </ClInclude>
     <ClInclude Include="TestObj.h">
       <Filter>ヘッダー ファイル\SAGASA</Filter>
+    </ClCompile>
     <ClInclude Include="AnimatedMesh.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
