--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -196,7 +196,7 @@
     </ClInclude>
     <ClInclude Include="TestObj.h">
       <Filter>ヘッダー ファイル\SAGASA</Filter>
-    </ClCompile>
+    </ClInclude>
     <ClInclude Include="AnimatedMesh.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
