--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -215,5 +215,11 @@
     <ClInclude Include="PoltergeistBullet.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Line.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Ray.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
