--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="PoltergeistBullet.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerTestScene.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -182,9 +185,6 @@
     <ClInclude Include="Poltergeist.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="PhysicsActor.h">
-      <Filter>ヘッダー ファイル\Math</Filter>
-    </ClInclude>
     <ClInclude Include="DrawUtil.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -220,6 +220,12 @@
     </ClInclude>
     <ClInclude Include="Ray.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerTestScene.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsActor.h">
+      <Filter>ヘッダー ファイル\SAGASA</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
