ActorProp.hを追加 Actorを改造 ActorPropを継承しているかのbool型変数を追加

--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -175,6 +175,7 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="ActorManager.h" />
+    <ClInclude Include="ActorProp.h" />
     <ClInclude Include="AnimatedMesh.h" />
     <ClInclude Include="Assets.h" />
     <ClInclude Include="AttackCollider.h" />
