--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -71,16 +71,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>.\lib\gslib_2020\inc;C:\Team4Production\lib\gslib_2020\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>.\lib\gslib_2020\lib;C:\Team4Production\lib\gslib_2020\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>.\lib\gslib_2020\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>.\lib\gslib_2020\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>.\lib\gslib_2020\inc;.\lib\gslib_2020\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>.\lib\gslib_2020\lib;.\lib\gslib_2020\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>.\lib\gslib_2020\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>.\lib\gslib_2020\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -117,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
