--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="interact_collider.cpp">
       <Filter>ソース ファイル\Actors\Player</Filter>
     </ClCompile>
+    <ClCompile Include="Particle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActorManager.h">
@@ -271,6 +274,9 @@
     </ClInclude>
     <ClInclude Include="interact_prop.h">
       <Filter>ヘッダー ファイル\Actors\Prop</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
