--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="EnemyTestScene.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleManager.cpp" />
     <ClCompile Include="player_ghost.cpp" />
     <ClCompile Include="player_paladin.cpp" />
     <ClCompile Include="NormalGhost.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="EnemyTestScene.h" />
     <ClInclude Include="GamePlayScene.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleManager.h" />
     <ClInclude Include="player_ghost.h" />
     <ClInclude Include="player_paladin.h" />
     <ClInclude Include="player_info.h" />
